cluster endpoint references
